adding new endpoints