@@ -1,4 +1,4 @@
-package Menu.MenuBackend.presentationlayer.security;
+package Menu.MenuBackend.common.security;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -13,6 +13,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -21,7 +22,13 @@ public class SecurityConfig {
     @Autowired
     private final FireBaseSecurityFilter fireBaseSecurityFilter;
 
-    private static final String[] WHITELISTED_API_ENDPOINTS = { "/api/test", "/api/getMenuForPeriod" };
+    private static final String[] WHITELISTED_API_ENDPOINTS = {
+            "/api/test",
+            "/api/getMenuForPeriod",
+            "/api/getRecipes",
+            "/api/getProducts",
+            "/api/addMenuItem"
+    };
 
     public SecurityConfig(FireBaseSecurityFilter fireBaseSecurityFilter) {
         this.fireBaseSecurityFilter = fireBaseSecurityFilter;
@@ -34,10 +41,10 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authManager ->
-                    authManager.requestMatchers(HttpMethod.OPTIONS)
-                            .permitAll()
-                            .requestMatchers(HttpMethod.GET, WHITELISTED_API_ENDPOINTS)
-                            .permitAll()
+                        authManager.requestMatchers(HttpMethod.OPTIONS).permitAll()
+                                .requestMatchers(HttpMethod.GET, WHITELISTED_API_ENDPOINTS).permitAll()
+                                .requestMatchers(HttpMethod.POST, "/api/addMenuItem").permitAll()
+                                .anyRequest().authenticated()
                 )
                 .addFilterBefore(fireBaseSecurityFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -47,7 +54,7 @@ public class SecurityConfig {
     @Bean
     UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:8081")); // Your frontend's origin
+        configuration.setAllowedOrigins(List.of("http://localhost:8081")); // Your frontend's origin
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);  // Allow credentials if needed
